--- a/download.html
+++ b/download.html
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE h    tml>
+<!DOCTYPE html>
 <html>
 
 	<head>
@@ -8,9 +7,9 @@
 		<meta name="keywords" content="CF泡面辅助官网,泡面辅助,CF越南服泡面辅助,泡面CF外服辅助,CF越南服辅助,www.paomfz.com,HACK CF VIP CHEAT">
 		<link rel="stylesheet" type="text/css" href="static/css/core.css">
 		<link rel="stylesheet" type="text/css" href="static/css/coret.css">
-		<script src="static/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="static/js/core.js" type="text/javascript" charset="utf-8"></script>
-		<script src="static/js/coret.js" type="text/javascript" charset="utf-8"></script>
+		<script src="static/js/jquery.min.js" type="text/javascript" ></script>
+		<script src="static/js/core.js" type="text/javascript" ></script>
+		<script src="static/js/coret.js" type="text/javascript" ></script>
 	</head>
 
 	<body id="TOP">
@@ -24,7 +23,7 @@
 				<div class="uk-navbar-right">
 					<ul class="uk-navbar-nav">
 						<li class="uk-active">
-							<a href="#">Home Page</a>
+							<a href="https://www.paomfz.com">Home Page</a>
 						</li>
 					</ul>
 				</div>
@@ -35,8 +34,6 @@
 				<ul uk-tab="">
 					<li>
 						<a href="#">CrossFire</a>
-					</li><li>
-						<a href="#">None</a>
 					</li>
 				</ul>
 				<ul class="uk-switcher uk-margin">
@@ -53,11 +50,11 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-0406(Pass123).zip" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP  CrossFire VN</h3></a>
-													<div class="info" uk-grid>
-													<div class="uk-width-1-2">Latest version:  CFVn-0406</div>
-													    <div class>State : <p><font color="#00FF00">Online/可用</font></p></div>    
+													<a href="https://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-0406(Pass123).zip" target="_blank">
+														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP<br>CrossFire VN</h3></a>
+													<div class="info" uk-grid="">
+													<div class="uk-width-1-2">Latest version :  CFVN-0406</div>
+													    <div class="">State : <p><font color="#00FF00">OK/可用</font></p></div>    
 
  <!--      <div class="uk-width-1-2">State:<p><font color="#FF0000">Updating/更新中  </font></p></div>     --> 
 													</div>
@@ -70,7 +67,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-0406(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
+											<a href="https://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-0406(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro1" uk-toggle=""><i class="intro"></i>Intro</a>
 											<div id="intro1" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -93,11 +90,11 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0407(Pass123).zip" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP  CrossFire West</h3></a>
-													<div class="info" uk-grid>
-												 		  <div class="uk-width-1-2">Latest version: CFWest-0407   </div>
-												           <div class>State : <p><font color="#00FF00">Online/可用</font></p></div>   
+													<a href="https://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0407(Pass123).zip" target="_blank">
+														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP<br>CrossFire West</h3></a>
+													<div class="info" uk-grid="">
+												 		  <div class="uk-width-1-2">Latest version : CFWest-0407   </div>
+												           <div class="">State : <p><font color="#00FF00">OK/可用</font></p></div>   
 
  <!--  <div class="uk-width-1-2">State:<p><font color="#FF0000">Updating/更新中         </font></p></div>  -->   
 													</div>
@@ -110,7 +107,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="http://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0407(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
+											<a href="https://www.paomfz.com/down/cfwest/PaoMianHax-CFWest-0407(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro2" uk-toggle=""><i class="intro"></i>intro</a>
 											<div id="intro2" uk-modal="center: true">
 												<div class="uk-modal-dialog">
@@ -125,6 +122,45 @@
 									</div>
 								</div>
 								<!-- card -->
+								<div class="content-card-box">
+									<div class="content-card-box-show">
+										<div class="uk-card-header">
+											<div class="uk-grid-small uk-flex-middle" uk-grid="">
+												<div class="uk-width-auto">
+													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
+												</div>
+												<div class="uk-width-expand">
+													<a href="https://www.paomfz.com/down/cfph/PaoMianHax-CFPh-0406(Pass123).zip" target="_blank">
+														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP<br>CrossFire PH</h3></a>
+													<div class="info" uk-grid="">
+												 		  <div class="uk-width-1-2">Latest version : CFPh-0408-2   </div>
+												     <!--        <div class="uk-width-1-2">State : <p><font color="#FF0000">Updating/更新中         </font></p></div>  -->  
+												           <div class="">State : <p><font color="#00FF00">OK/可用</font></p></div>   
+													</div>
+												</div>
+											</div>
+										</div>
+										<hr class="uk-divider-icon">
+										<div class="uk-card-body .uk-padding-small">
+											<p class="desc">Password:123  ||  解压密码:123 </p>
+										</div>
+										<hr class="uk-hr">
+										<div class="uk-card-footer">
+											<a href="https://www.paomfz.com/down/cfph/PaoMianHax-CFPh-0406(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>down</a>
+											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>intro</a>
+											<div id="intro3" uk-modal="center: true">
+												<div class="uk-modal-dialog">
+													<button class="uk-modal-close-default" type="button" uk-close=""></button>
+													<div class="uk-modal-body">
+														<h2 class="uk-modal-title">PaoMian Hax - CF PH</h2>
+														<pre class="uk-margin-remove">[1]等待修改...</pre>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+																<!-- card -->
 <div class="content-card-box">
 									<div class="content-card-box-show">
 
@@ -136,7 +172,7 @@
 												<div class="uk-width-expand">
 													<a href="https://wwx.lanzoui.com/b0svooah" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">备用下载地址</h3></a>
-													<div class="info" uk-grid>
+													<div class="info" uk-grid="">
 													</div>
 												</div>
 											</div>
@@ -148,8 +184,8 @@
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
 											<a href="https://wwx.lanzoui.com/b0svooah" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
-											<a class="uk-button uk-button-default uk-button-small" href="#intro3" uk-toggle=""><i class="intro"></i>使用事项</a>
-											<div id="intro3" uk-modal="center: true">
+											<a class="uk-button uk-button-default uk-button-small" href="#intro4" uk-toggle=""><i class="intro"></i>使用事项</a>
+											<div id="intro4" uk-modal="center: true">
 												<div class="uk-modal-dialog">
 													<button class="uk-modal-close-default" type="button" uk-close=""></button>
 													<div class="uk-modal-body">
@@ -172,7 +208,7 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<ahref="" target="_blank">
+													<a href="https://wwx.lanzoui.com/b0svooah" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">CF外服最新客户端</h3></a>
 													<div class="info" uk-grid="">
 													</div>
@@ -181,13 +217,13 @@
 										</div>
 										<hr class="uk-divider-icon">
 										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">第三方客户端目前已失效　　　　　　　　　　　请自行购买或租借百度网盘会员。[密码:piha]</p>
+											<p class="desc">第三方客户端目前已失效<br>请自行购买或租借百度网盘会员。[密码:piha]</p>
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="https://pan.baidu.com/s/1iuz3xTkz_mQU2cVuvRFGAA" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
-											<a class="uk-button uk-button-default uk-button-small" href="#intro4" uk-toggle=""><i class="intro"></i>使用事项</a>
-											<div id="intro4" uk-modal="center: true">
+											<a href="https://pan.baidu.com/share/init?surl=iuz3xTkz_mQU2cVuvRFGAA" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
+											<a class="uk-button uk-button-default uk-button-small" href="#intro5" uk-toggle=""><i class="intro"></i>使用事项</a>
+											<div id="intro5" uk-modal="center: true">
 												<div class="uk-modal-dialog">
 													<button class="uk-modal-close-default" type="button" uk-close=""></button>
 													<div class="uk-modal-body">
@@ -203,82 +239,6 @@
 										</div>
 									</div>
 								</div>
-								<!-- card -->
-<div class="content-card-box">
-									<div class="content-card-box-show">
-
-										<div class="uk-card-header">
-											<div class="uk-grid-small uk-flex-middle" uk-grid="">
-												<div class="uk-width-auto">
-													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/PanDownload.png">
-												</div>
-												<div class="uk-width-expand">
-													<a href="http://pandownload.com/" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">PanDownload</h3></a>
-													<div class="info" uk-grid="">
-
-
-													</div>
-												</div>
-											</div>
-										</div>
-										<hr class="uk-divider-icon">
-										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">百度网盘不限速下载器</p>
-										</div>
-										<hr class="uk-hr">
-										<div class="uk-card-footer">
-											<a href="http://pandownload.com/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
-											<a class="uk-button uk-button-default uk-button-small" href="#intro5" uk-toggle=""><i class="intro"></i>功能介绍</a>
-											<div id="intro5" uk-modal="center: true">
-												<div class="uk-modal-dialog">
-													<button class="uk-modal-close-default" type="button" uk-close=""></button>
-													<div class="uk-modal-body">
-														<h2 class="uk-modal-title">PanDownload</h2>
-														<pre class="uk-margin-remove">[1]破解百度网盘限速，可能已经失效。</pre>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<!-- card -->
-<div class="content-card-box">
-									<div class="content-card-box-show">
-
-										<div class="uk-card-header">
-											<div class="uk-grid-small uk-flex-middle" uk-grid="">
-												<div class="uk-width-auto">
-													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/SpeedPan.png">
-												</div>
-												<div class="uk-width-expand">
-													<a href="https://www.speedpan.com/" target="_blank">
-														<h3 class="uk-card-title uk-margin-remove-bottom">SpeedPan</h3></a>
-													<div class="info" uk-grid="">
-													</div>
-												</div>
-											</div>
-										</div>
-										<hr class="uk-divider-icon">
-										<div class="uk-card-body .uk-padding-small">
-											<p class="desc">百度网盘不限速下载器</p>
-										</div>
-										<hr class="uk-hr">
-										<div class="uk-card-footer">
-											<a href="https://www.speedpan.com/" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>立即下载</a>
-											<a class="uk-button uk-button-default uk-button-small" href="#intro6" uk-toggle=""><i class="intro"></i>功能介绍</a>
-											<div id="intro6" uk-modal="center: true">
-												<div class="uk-modal-dialog">
-													<button class="uk-modal-close-default" type="button" uk-close=""></button>
-													<div class="uk-modal-body">
-														<h2 class="uk-modal-title">SpeedPan</h2>
-														<pre class="uk-margin-remove">[1]破解百度网盘限速，可能已经失效。</pre>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
 								<!-- end -->
 
 							</div>
@@ -287,17 +247,6 @@
 				</ul>
 			</div>
 		</div>
-		<div class="footerWrap">
-			<div class="uk-background-secondary uk-light uk-padding uk-panel uk-padding-remove-bottom">
-				<div class="uk-clearfix">
-					<div class="interesting"></div>
-					<div class="outlink">
-						
-					</div>
-				</div>
-				<div class="about">
-					<p class="uk-margin-remove-bottom"> Copyright © 2017-2020 Paomfz.com All Rights Reserved&nbsp;
-					</p>
 				</div>
 			</div>
 		</div>
