--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <li ver=""><a href="https://wwx.lanzoui.com/b0svooah" target="_blank">下载中心</a></li>
           <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密>></a></li>
         </ul>
-        <p>Support: windows XP,7,8.1,10  (32bit/64bit)</p>
+        <p>Supported OS: windows 7,8.1,10  (64bit Only)</p>
         <div log="">
           <div>
             <p>Update Logs:</p>
