--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p slogan=""></p>
         <ul>
           <li ver=""><a href="https://wwx.lanzoui.com/b0svooah" target="_blank">下载中心</a></li>
-          <li buy=""><a href="https://www.128faka.com/links/47CE658F">购买卡密>></a></li>
+          <li buy=""><a href="https://www.cloudfaka.com/links/9C6DE88E">购买卡密>></a></li>
         </ul>
         <p>Supported OS: windows 7,8.1,10  (64bit Only)</p>
         <div log="">
