--- a/download.html
+++ b/download.html
@@ -136,8 +136,8 @@
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP<br>CrossFire PH</h3></a>
 													<div class="info" uk-grid="">
 												 		  <div class="uk-width-1-2">Latest version : CFPh-210624   </div>
-												     <!--        <div class="uk-width-1-2">State : <p><font color="#FF0000">Updating/更新中         </font></p></div>  -->  
-													 												           <div class="">State : <p><font color="#00FF00">Online/可用</font></p></div>   
+												             <div class="uk-width-1-2">State : <p><font color="#FF0000">Updating/更新中         </font></p></div>   
+													 												       <!--    <div class="">State : <p><font color="#00FF00">Online/可用</font></p></div>   --> 
 													</div>
 												</div>
 											</div>
