--- a/download.html
+++ b/download.html
@@ -52,10 +52,10 @@
 													<img class="uk-border-circle uk-animation-reverse uk-transform-origin-top-right" uk-scrollspy="cls: uk-animation-kenburns;" width="60" height="60" src="static/images/crossfire.png">
 												</div>
 												<div class="uk-width-expand">
-													<a href="https://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-210713(Pass123).zip" target="_blank">
+													<a href="https://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-210713-2(Pass123).zip" target="_blank">
 														<h3 class="uk-card-title uk-margin-remove-bottom">PaoMian Hax VIP<br>CrossFire VN</h3></a>
 													<div class="info" uk-grid="">
-													<div class="uk-width-1-2">Latest version :  CFVn-210713</div>
+													<div class="uk-width-1-2">Latest version :  CFVn-210713-2</div>
 													    <div class="">State : <p><font color="#00FF00">Online/可用</font></p></div>    
 
  <!--      <div class="uk-width-1-2">State:<p><font color="#FF0000">Updating/更新中  </font></p></div>     --> 
@@ -69,7 +69,7 @@
 										</div>
 										<hr class="uk-hr">
 										<div class="uk-card-footer">
-											<a href="https://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-210713(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
+											<a href="https://www.paomfz.com/down/cfvn/PaoMianHax-CFVn-210713-2(Pass123).zip" class="uk-button uk-button-default uk-button-small" target="_blank" title="=.=" uk-tooltip="pos: top-left"><i class="downloadIcon"></i>Down</a>
 											<a class="uk-button uk-button-default uk-button-small" href="#intro1" uk-toggle=""><i class="intro"></i>Intro</a>
 											<div id="intro1" uk-modal="center: true">
 												<div class="uk-modal-dialog">
